--- a/src/main/resources/response.properties
+++ b/src/main/resources/response.properties
@@ -1,4 +1,4 @@
-RC-99 = Terjadi kesalahan pada system
+RC-99 = Nama atau nomor HP Kosong
 RC-00 = Success
 RC-01 = nomor telefon sudah Terdaftar 
 RC-02 = username sudah terpakai
@@ -7,6 +7,7 @@ LG-03 = Username atau Password Tidak Sesuaii
 CP-01 = Nomor anda tidak terdaftar
 CP-02 = Otp anda sudah expired
 CP-03 = Otp yang anda masukan salah
+CP-04 = Session Anda Telah Habis
 CT-01 = text tidak boleh kosong 
 CT-02 = id sender tidak boleh kosong
 CT-03 = id reciver tidak boleh kosong
