--- a/src/main/resources/response.properties
+++ b/src/main/resources/response.properties
@@ -1,4 +1,4 @@
-RC-99 = Nama atau nomor HP Kosong
+RC-99 = Terjadi kesalahan Pada Server
 RC-00 = Success
 RC-01 = nomor telefon sudah Terdaftar 
 RC-02 = username sudah terpakai
