--- a/src/main/resources/response.properties
+++ b/src/main/resources/response.properties
@@ -2,8 +2,8 @@ RC-99 = Terjadi kesalahan Pada Server
 RC-00 = Success
 RC-01 = nomor telefon sudah Terdaftar 
 RC-02 = username sudah terpakai
-LG-02 = Username atau Password kosong
-LG-03 = Username atau Password Tidak Sesuaii
+LG-02 = (Phone/Email)  dan  Password kosong
+LG-03 = (Phone/Email) atau Password Tidak Sesuaii
 CP-01 = Nomor anda tidak terdaftar
 CP-02 = Otp anda sudah expired
 CP-03 = Otp yang anda masukan salah
