--- a/src/main/resources/response.properties
+++ b/src/main/resources/response.properties
@@ -8,6 +8,7 @@ CP-01 = Nomor anda tidak terdaftar
 CP-02 = Otp anda sudah expired
 CP-03 = Otp yang anda masukan salah
 CP-04 = Session Anda Telah Habis
+CP-05 = Request Ditolak Server
 CT-01 = text tidak boleh kosong 
 CT-02 = id sender tidak boleh kosong
 CT-03 = id reciver tidak boleh kosong
