--- a/src/main/resources/response.properties
+++ b/src/main/resources/response.properties
@@ -18,3 +18,4 @@ CT-06 = Chat tidak ditemukan
 CT-07 = id tidak boleh kosong
 PT-01 = Data tidak ditemukan
 PT-02 = id kosong
+PR-01 = Product Kosong
